--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ng2-breadcrumb",
-  "version": "0.5.14",
+  "name": "ngx-breadcrumb",
+  "version": "0.5.15",
   "description": "A component that creates a breadcrumb trail for router paths",
   "scripts": {
     "start": "tsc && concurrently \"npm run ngc\" \"npm run lite\" ",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gmostert/ng2-breadcrumb.git"
+    "url": "https://github.com/monster910/ng2-breadcrumb.git"
   },
   "keywords": [
     "angular2"
